# datagouv-mcp-client

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: README.md  index.html  package-lock.json  package.json
app/public/data/: public_spending.json
app/src/: App.jsx  index.css
app/src/components/: BudgetExplorer.jsx  BudgetTreemap.jsx  EuroAllocation.jsx  EuropeChart.jsx  Hero.jsx  Nav.jsx  PersonalImpact.jsx  RevenueBreakdown.jsx  TaxCalculator.jsx
docs/: data_pipeline_modes.md  public_spending_data_inventory.md
examples/: public_spending_plots.py  simple_usage.py
scripts/: data_pipeline.py  prepare_data.py  validate_data_contract.py
src/datagouv_client/: __init__.py  client.py
src/datagouv_client/tools/: __init__.py  datasets.py  resources.py  schemas.py
